--- a/apps/question-answer-e2e/project.json
+++ b/apps/question-answer-e2e/project.json
@@ -17,12 +17,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/question-answer-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/question-answer-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["question-answer"]
+  "implicitDependencies": [
+    "question-answer"
+  ]
 }
