--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "projects": {
-    "api": "apps/api",
     "api-interfaces": "libs/api-interfaces",
-    "question-answer": "apps/question-answer",
-    "question-answer-e2e": "apps/question-answer-e2e"
+    "client": "apps/client",
+    "client-e2e": "apps/client-e2e",
+    "server": "apps/server"
   }
 }
