--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -1,28 +1,23 @@
 {
   "projectType": "application",
-  "root": "apps/question-answer",
-  "sourceRoot": "apps/question-answer/src",
+  "root": "apps/client",
+  "sourceRoot": "apps/client/src",
   "prefix": "question-answer",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/question-answer",
-        "index": "apps/question-answer/src/index.html",
-        "main": "apps/question-answer/src/main.ts",
-        "polyfills": "apps/question-answer/src/polyfills.ts",
-        "tsConfig": "apps/question-answer/tsconfig.app.json",
+        "outputPath": "dist/apps/client",
+        "index": "apps/client/src/index.html",
+        "main": "apps/client/src/main.ts",
+        "polyfills": "apps/client/src/polyfills.ts",
+        "tsConfig": "apps/client/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": [
-          "apps/question-answer/src/favicon.ico",
-          "apps/question-answer/src/assets"
-        ],
+        "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
         "styles": [
           "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-          "apps/question-answer/src/styles.scss"
+          "apps/client/src/styles.scss"
         ],
         "scripts": []
       },
@@ -42,8 +37,8 @@
           ],
           "fileReplacements": [
             {
-              "replace": "apps/question-answer/src/environments/environment.ts",
-              "with": "apps/question-answer/src/environments/environment.prod.ts"
+              "replace": "apps/client/src/environments/environment.ts",
+              "with": "apps/client/src/environments/environment.prod.ts"
             }
           ],
           "outputHashing": "all"
@@ -63,39 +58,37 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "question-answer:build:production"
+          "browserTarget": "client:build:production"
         },
         "development": {
-          "browserTarget": "question-answer:build:development"
+          "browserTarget": "client:build:development"
         }
       },
       "defaultConfiguration": "development",
       "options": {
-        "proxyConfig": "apps/question-answer/proxy.conf.json"
+        "proxyConfig": "apps/client/proxy.conf.json"
       }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "question-answer:build"
+        "browserTarget": "client:build"
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": [
-          "apps/question-answer/src/**/*.ts",
-          "apps/question-answer/src/**/*.html"
+          "apps/client/src/**/*.ts",
+          "apps/client/src/**/*.html"
         ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/apps/question-answer"
-      ],
+      "outputs": ["coverage/apps/client"],
       "options": {
-        "jestConfig": "apps/question-answer/jest.config.js",
+        "jestConfig": "apps/client/jest.config.js",
         "passWithNoTests": true
       }
     }
