--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "@nrwl/workspace": "13.8.1",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "cypress": "^9.1.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
@@ -61,6 +61,6 @@
     "jest-preset-angular": "11.0.0",
     "prettier": "^2.5.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.5.2"
+    "typescript": "^4.5.5"
   }
 }
