--- a/apps/server/tsconfig.app.json
+++ b/apps/server/tsconfig.app.json
@@ -8,5 +8,6 @@
     "target": "es2015"
   },
   "exclude": ["**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts"],
+  "composite": true
 }
