--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
+    "startClient": "yarn nx serve client",
+    "startServer": "yarn nx serve server",
+    "buildClient": "yarn nx run client:build:production",
+    "buildServer": "yarn nx run server:build:production",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "createOrmConfig": "(rm ormconfig.json || :) && ts-node -r tsconfig-paths/register --project ./tsconfig.base.json -O '{\"module\":\"commonjs\"}' ./apps/server/src/scripts/write-type-orm-config.ts",
+    "pretypeorm": "yarn run createOrmConfig",
+    "typeorm": "ts-node -r tsconfig-paths/register --project ./tsconfig.base.json -O '{\"module\":\"commonjs\"}' ./node_modules/typeorm/cli.js",
+    "createMigration": "cross-env MODE=production yarn run typeorm migration:generate",
+    "runMigration": "yarn run typeorm migration:run",
+    "revertMigration": "yarn run typeorm migration:revert"
   },
   "private": true,
   "dependencies": {
@@ -24,10 +31,15 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.3",
     "@nrwl/angular": "13.8.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
+    "typeorm": "^0.2.42",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
