Edit eslint rules
Edit 'semi' and 'comma-dangle'

--- a/apps/server/.eslintrc.json
+++ b/apps/server/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["../../.eslintrc.json", "../../eslintrc-custom-overrides.json"],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "**/migration/**"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
