Add initial User, google OAuth 2.0 and project aliases

--- a/.env-example
+++ b/.env-example
@@ -3,7 +3,10 @@ POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+HOST=http://localhost
 PORT=3000
 MODE=production
 RUN_MIGRATIONS=false
 USE_SSL=
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET=
