--- a/package.json
+++ b/package.json
@@ -30,12 +30,17 @@
     "@angular/router": "~13.2.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
     "@nrwl/angular": "13.8.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
@@ -65,6 +70,7 @@
     "@nrwl/workspace": "13.8.1",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "cypress": "^9.1.0",
