--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@question-answer/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@qa/api-interfaces": ["libs/api-interfaces/src/"],
+      "@qa/client/*": ["apps/client/src/*"],
+      "@qa/server/*": ["apps/server/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
