Add ts types for environment values and change server files structure
Move typeorm relative files to typeorm folder

--- a/.env-example
+++ b/.env-example
@@ -1,12 +1,18 @@
+# Database config
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+RUN_MIGRATIONS=false
+
+# Google API and Services Project Credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET=
+
+# Environment Info
 HOST=http://localhost
 PORT=3000
 MODE=production
-RUN_MIGRATIONS=false
 USE_SSL=
-GOOGLE_CLIENT_ID=
-GOOGLE_SECRET=
+
