feat: implement google auth

--- a/.env-example
+++ b/.env-example
@@ -13,6 +13,6 @@ GOOGLE_SECRET=
 # Environment Info
 HOST=http://localhost
 PORT=3000
-MODE=production
+MODE=     # production OR development
 USE_SSL=
-
+SESSION_SECRET=
