--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
+    "express-session": "^1.17.3",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
@@ -69,6 +70,7 @@
     "@nrwl/node": "13.8.1",
     "@nrwl/tao": "13.8.1",
     "@nrwl/workspace": "13.8.1",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/passport-google-oauth20": "^2.0.11",
