--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "startServer": "yarn nx serve server",
     "buildClient": "yarn nx run client:build:production",
     "buildServer": "yarn nx run server:build:production",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "createOrmConfig": "(rm ormconfig.json || :) && ts-node -r tsconfig-paths/register --project ./tsconfig.base.json -O '{\"module\":\"commonjs\"}' ./apps/server/src/typeorm/scripts/write-type-orm-config.ts",
     "pretypeorm": "yarn run createOrmConfig",
     "typeorm": "ts-node -r tsconfig-paths/register --project ./tsconfig.base.json -O '{\"module\":\"commonjs\"}' ./node_modules/typeorm/cli.js",
@@ -18,23 +18,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/cdk": "^13.2.2",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.2.2",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@angular/animations": "14.1.3",
+    "@angular/cdk": "14.1.3",
+    "@angular/common": "14.1.3",
+    "@angular/compiler": "14.1.3",
+    "@angular/core": "14.1.3",
+    "@angular/forms": "14.1.3",
+    "@angular/material": "14.1.3",
+    "@angular/platform-browser": "14.1.3",
+    "@angular/platform-browser-dynamic": "14.1.3",
+    "@angular/router": "14.1.3",
+    "@nestjs/common": "9.0.11",
+    "@nestjs/core": "9.0.11",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.2.1",
+    "@nestjs/platform-express": "9.0.11",
+    "@nestjs/swagger": "6.1.0",
     "@nestjs/typeorm": "^8.0.3",
-    "@nrwl/angular": "13.8.1",
+    "@nrwl/angular": "14.5.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
@@ -44,46 +44,48 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.4.0",
+    "rxjs": "7.5.6",
     "swagger-ui-express": "^4.3.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.42",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@nrwl/cli": "13.8.1",
-    "@nrwl/cypress": "13.8.1",
-    "@nrwl/eslint-plugin-nx": "13.8.1",
-    "@nrwl/jest": "13.8.1",
-    "@nrwl/linter": "13.8.1",
-    "@nrwl/nest": "13.8.1",
-    "@nrwl/node": "13.8.1",
-    "@nrwl/tao": "13.8.1",
-    "@nrwl/workspace": "13.8.1",
+    "@angular-devkit/build-angular": "14.1.3",
+    "@angular-eslint/eslint-plugin": "14.0.3",
+    "@angular-eslint/eslint-plugin-template": "14.0.3",
+    "@angular-eslint/template-parser": "14.0.3",
+    "@angular/cli": "~14.1.0",
+    "@angular/compiler-cli": "14.1.3",
+    "@angular/language-service": "14.1.3",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.11",
+    "@nrwl/cli": "14.5.10",
+    "@nrwl/cypress": "14.5.10",
+    "@nrwl/eslint-plugin-nx": "14.5.10",
+    "@nrwl/jest": "14.5.10",
+    "@nrwl/linter": "14.5.10",
+    "@nrwl/nest": "14.5.10",
+    "@nrwl/node": "14.5.10",
+    "@nrwl/nx-cloud": "14.6.0",
+    "@nrwl/workspace": "14.5.10",
     "@types/express-session": "^1.17.4",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.7",
+    "@types/jest": "27.4.1",
+    "@types/node": "18.7.1",
     "@types/passport-google-oauth20": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
     "cypress": "^9.1.0",
-    "eslint": "~8.7.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
-    "prettier": "^2.5.1",
-    "ts-jest": "27.0.5",
-    "typescript": "^4.5.5"
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.2",
+    "prettier": "2.7.1",
+    "ts-jest": "27.1.4",
+    "typescript": "4.7.4",
+    "nx": "14.5.10"
   }
 }
+
