refactoring: remove google-auth and add standard user email/password register

--- a/.env-example
+++ b/.env-example
@@ -6,13 +6,7 @@ POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 RUN_MIGRATIONS=false
 
-# Google API and Services Project Credentials
-GOOGLE_CLIENT_ID=
-GOOGLE_SECRET=
-
 # Environment Info
 HOST=http://localhost
 PORT=3000
-MODE=     # production OR development
-USE_SSL=
-SESSION_SECRET=
+NODE_ENV=     # production OR development
