--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:client": "yarn nx run client:build:production",
     "build:server": "yarn nx run server:build:production",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
-    "typeorm": "cross-env MODE=production ts-node -r tsconfig-paths/register --project ./tsconfig.base.json -O '{\"module\":\"commonjs\"}' ./node_modules/typeorm/cli.js --config ./apps/server/src/typeorm/ormconfig.ts",
+    "typeorm": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register --project ./tsconfig.base.json -O '{\"module\":\"commonjs\"}' ./node_modules/typeorm/cli.js --config ./apps/server/src/typeorm/ormconfig.ts",
     "db:drop": "yarn typeorm schema:drop",
     "db:create": "yarn typeorm migration:generate",
     "db:migrate": "yarn typeorm migration:run"
@@ -28,7 +28,6 @@
     "@angular/router": "14.1.3",
     "@nestjs/common": "9.0.11",
     "@nestjs/core": "9.0.11",
-    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "9.0.11",
     "@nestjs/swagger": "6.1.0",
     "@nestjs/typeorm": "^8.0.3",
@@ -38,8 +37,6 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express-session": "^1.17.3",
-    "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.6",
@@ -71,7 +68,6 @@
     "@types/express-session": "^1.17.4",
     "@types/jest": "27.4.1",
     "@types/node": "18.7.1",
-    "@types/passport-google-oauth20": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
     "cypress": "^9.1.0",
@@ -80,9 +76,9 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.2",
+    "nx": "14.5.10",
     "prettier": "2.7.1",
     "ts-jest": "27.1.4",
-    "typescript": "4.7.4",
-    "nx": "14.5.10"
+    "typescript": "4.7.4"
   }
 }
