--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.6",
