--- a/libs/api-interfaces/project.json
+++ b/libs/api-interfaces/project.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/api-interfaces/src",
+  "sourceRoot": "libs/api-interfaces",
   "projectType": "library",
   "targets": {
     "lint": {
