--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.6",
+    "slugify": "^1.6.5",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "10.9.1",
     "tslib": "^2.0.0",
