--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "questionAnswer",
+            "prefix": "qa",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "question-answer",
+            "prefix": "qa",
             "style": "kebab-case"
           }
         ]
