--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -2,7 +2,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/client/src",
-  "prefix": "question-answer",
+  "prefix": "qa",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
