--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -15,10 +15,10 @@
         "tsConfig": "apps/client/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
-        "styles": [
-          "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-          "apps/client/src/styles.scss"
-        ],
+        "styles": ["apps/client/src/styles/styles.scss"],
+        "stylePreprocessorOptions": {
+          "includePaths": ["apps/client/src/styles/"]
+        },
         "scripts": []
       },
       "configurations": {
