--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/common": "9.0.11",
     "@nestjs/core": "9.0.11",
     "@nestjs/platform-express": "9.0.11",
+    "@nestjs/platform-socket.io": "^9.1.6",
     "@nestjs/swagger": "6.1.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^9.1.6",
     "@nrwl/angular": "14.5.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -39,10 +41,12 @@
     "dotenv": "^16.0.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "ngx-socket-io": "^4.3.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.6",
     "slugify": "^1.6.5",
+    "socket.io": "^4.5.3",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "10.9.1",
     "tslib": "^2.0.0",
